# FAIRiAgent

./: .dockerignore  .gitignore  CLAUDE.md  CLEANUP_PLAN.md  DESIGN.md  DOCS_INDEX.md  Dockerfile  FAIRDS_API_EXPLORATION.md  FINAL_CHECK_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART_CN.md  README.md  REQUIREMENTS_ANALYSIS.md  SYSTEM_READY.md  WORKFLOW_SUMMARY.md  env.example  fairds_stats.html  install_webui_deps.sh  langgraph.json  patch_baselines.py  pyproject.toml  quick_test.py  quick_test.sh  requirements.txt  run_all_baselines.sh  run_fairifier.py  run_quick_ablation.sh  run_tests.py  run_tests.sh  start_gradio.sh  start_streamlit.sh  test_langsmith.py  test_mem0_v3.py  test_reflective_workflow.py  test_tools_integration.py  test_workflow_quick.py  verify_complete_system.py
.cursor/rules/: Do-nots.mdc  no-markdown.mdc
archive/docs/: FAIR_DS_INTEGRATION_GUIDE.md  FINAL_PROJECT_FILES.md  INSTALL.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README_FINAL.md  README_IMPLEMENTATION.md  README_SIMPLE.md  SIMPLIFICATION_REPORT.md
archive/prototypes/: demo.py  demo_schema.json  demo_template.yaml  fairifier_final.py  fairifier_simple.py  fairifier_with_api.py  mock_fair_ds_demo.py  requirements_final.txt  requirements_simple.txt
archive/tests/: test_fair_ds_api.py  test_fairifier.py
development/scratch/: test_mem0_v3_structure.py  test_memory_cloud.py
docker/: DOCKER_VERSION_1.1.0-mem0.md  Dockerfile.api  Dockerfile.minimal  Dockerfile.ui  README.md  compose.yaml  pack-fairds-jar.sh  test-cli.sh  test-image.sh
docker/fairds/: .gitignore  Dockerfile  (+1 more)
docs/: ARCHITECTURE_AND_FLOW.md  BUGFIX_document_info_mapping.md  CHANGELOG.md  CHANGELOG_DRAFT.md  EVALUATION_METHODOLOGY.md  EXECUTIVE_SUMMARY_CN.md  INDEX.md  MEM0_INTEGRATION_SUMMARY.md  MEM0_QUICKSTART.md  MEMORY_GUIDE.md  MEMORY_OVERVIEW_GUIDE.md  MODEL_COMPARISON_FINAL_20260129.md  PROJECT_PROGRESS_REPORT.md  PROMPTS_AUDIT_REPORT.md  PROMPT_IMPROVEMENTS_20260129.md  README.md  README_IMPLEMENTATION.md  example_llm_usage.py  ~$FAIRiAgent_ From Unstructured Research Documents to FAIR Metadata.pptx
evaluation/: DOCUMENTATION_INDEX.md  EVALUATION_IMPROVEMENT_PLAN.md  Makefile  README.md  RERUN_GUIDE.md  generate_exp1_final.py  generate_final_charts.py  generate_presentation_charts.py  generate_presentation_draft.py  generate_presentation_exp1.py  generate_presentation_exp2_3.py
fairifier/: __init__.py  cli.py  config.py  models.py  output_paths.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
kb/: combined_metadata.csv  mixs_fields.json  ontologies.json
output_20251106_192308/: processing_log.jsonl
output_20251106_192432/: llm_responses.json  metadata_json.json  processing_log.jsonl
output_20251106_201357/: llm_responses.json  metadata_json.json  processing_log.jsonl
output_20251106_202403/: llm_responses.json  metadata_json.json  processing_log.jsonl
scripts/: update_fairds_jar.sh
tests/: .env.test.example  README.md  TESTING_STRATEGY.md  TEST_SUMMARY.md  conftest.py  test_ablation_toggles.py  test_agent_mailbox.py  test_api_artifacts.py  test_api_fairds_statistics.py  test_api_main.py  test_api_sessions.py  test_candidate_normalization.py  test_cli_confidence_scores.py  test_compare_values_gt.py  test_confidence_aggregator.py  test_config_saver.py  test_context_observability.py  test_critic_decision.py  test_critic_utils.py  test_deep_agents_inner_loops.py  test_deepseek_provider.py  test_doc_info_canonical.py  test_document_text_by_reference.py  test_entity_splitter.py  test_evaluate_agent_quality.py  test_evidence_packets.py  test_execution_history_compact.py  test_fair_data_station.py  test_fair_ds_tools.py  test_fairds_api_parser.py  test_fairds_excel_export.py  test_field_candidates.py  test_gemini_provider.py  test_isa_order.py  test_isa_structure_tools.py  test_json_generator_field_queries.py  test_json_schema_validation.py  test_knowledge_retriever_package_strategy.py  test_langfuse_observability.py  test_langgraph_edges.py  (+37 more)
(+423 files in other folders)
