[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fairifier"
version = "1.0.0.20260128rc"
description = "FAIRifier Agentic Framework for automated FAIR metadata generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "fairifier"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
# Core agentic framework
langgraph = "^0.0.65"
langchain = "^0.1.0"
langchain-community = "^0.0.38"
langchain-openai = "^0.0.8"
# LLM and embeddings
transformers = "^4.36.0"
sentence-transformers = "^2.2.2"
torch = "^2.1.0"
# Vector database
qdrant-client = "^1.7.0"
# RDF and semantic web
rdflib = "^7.0.0"
pyshacl = "^0.25.0"
pyld = "^2.0.3"
pytesseract = "^0.3.10"
pymupdf = "^1.23.0"
# RO-Crate
rocrate = "^0.9.0"
# Web framework
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
streamlit = "^1.28.0"
# Database
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
# Storage
minio = "^7.2.0"
# Utilities
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
# Monitoring and logging
structlog = "^23.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-v --tb=short"
